force-app/main/default/objects/TrainingCourseParticipant/TrainingCourseParticipant.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>