force-app/main/default/objects/TrainingCourseParticipant/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Training Course Participants</relationshipLabel>
    <relationshipName>Training_Course_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>