force-app/main/default/objects/TrainingCourseParticipant/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <formula>TEXT(DAY(DATEVALUE( EndDate ))) &amp; &quot;th day of &quot;
&amp; 
CASE(
  MONTH(DATEVALUE( EndDate )),
   1, &quot;January&quot;,
   2, &quot;February&quot;,
   3, &quot;March&quot;, 
   4, &quot;April&quot;, 
   5, &quot;May&quot;, 
   6, &quot;June&quot;,
   7, &quot;July&quot;,
   8, &quot;August&quot;,
   9, &quot;September&quot;,
  10, &quot;October&quot;,
  11, &quot;November&quot;,
  12, &quot;December&quot;,
&quot;None&quot;)

 &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE( EndDate )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Date</label>
    <type>Text</type>
</CustomField>