force-app/main/default/objects/TrainingCourseParticipant/fields/Training_Course__c.field-meta.xml
<CustomField>
    <fullName>Training_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Course</label>
    <referenceTo>TrnCourse</referenceTo>
    <relationshipLabel>Training Course Participants</relationshipLabel>
    <relationshipName>Training_Course_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>