force-app/main/default/objects/TrainingCourseParticipant/fields/TrainingCourseName__c.field-meta.xml
<CustomField>
    <fullName>TrainingCourseName__c</fullName>
    <formula>Training_Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Course Name</label>
    <type>Text</type>
</CustomField>